@@ -1,3 +1,8 @@
+2006-05-12  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* gtk/gtkcombobox.c (gtk_combo_box_list_position): When in toolbar,
+	popup the list above the widget rather than down. N#29420
+
 2006-05-11  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* gtk/gtkcombobox.c (gtk_combo_box_list_setup): Monitor the button
